# aimm

./: .editorconfig  .env.sample  .gitignore  Arena.py  Coach.py  Config.py  Game.py  IGame.py  INeuralNet.py  MCTS.py  NeuralNet.py  README.md  compose.prod.yaml  compose.yaml  environment.yml  main.py  measure_queries_pipe.sh  pit.py  pyproject.toml  requirements.txt  test_all_games.py  train_mongo_pipe.sh  train_neo4j_pipe.sh  train_postgres_pipe.sh  train_postgres_pipe_nn.sh  utils.py
alpha/: Agents.py  Game.py  State.py  __init__.py
alpha/pytorch/: NeuralNet.py  NeuralNetModule.py
common/: config.py  data_generator.py  database.py  database_provider.py  databases.py  driver_provider.py  drivers.py  utils.py
common/daos/: base_dao.py  mongo_dao.py  neo4j_dao.py  postgres_dao.py
common/loaders/: neo4j_loader.py  postgres_loader.py
data/: .gitignore
database/: brute_force.py  config.yaml  config_example.yaml  generate_data.py  main.py  mcts.py  populate_db.py  populate_neo.py  query_engine.py  requirements.txt  start_dbs.sh
database/daos/: base_dao.py  mongo_dao.py  neo4j_dao.py  postgres_dao.py
database/data/: data_download_link.txt  schema.txt
database/edbt/: populate_postgres.py  test.py
datasets/: database.py
datasets/edbt/: README.md  (+4 more)
dynamic/: README.md
latency_estimation/: common.py  train_config.py
othello/: OthelloBoard.py  OthelloGame.py  OthelloPlayers.py
pipelines/: test_all_queries.sh
scripts/: __init__.py  measure_queries_pipe.sh  train_mongo_pipe.sh  train_neo4j_pipe.sh  train_postgres_pipe.sh  train_postgres_pipe_nn.sh
(+305 files in other folders)
