[project]
name = "aimm"
dynamic = ["version"]

dependencies = [
    "psycopg2-binary",
    "types-psycopg2",
    "pymongo",
    "neo4j",
    "pyyaml",
    "scikit-learn",
    "xgboost",
    "torch",
    "tabulate",
    "matplotlib",
    "python-dotenv",
    "rich",
    "tpchgen-cli",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
